--- a/osn.html
+++ b/osn.html
@@ -342,7 +342,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-                                                                    <a href="./assets/pdf/tabelOSNAstronomi.pdf" class=" aalink stretched-link"><span class="instancename">Download DATA dan KONSTANTA <span class="accesshide "> Berkas</span></span>    </a>
+                                                                    <a href="./assets/pdf/tabelOSNAstronomi.pdf" target="blank" class=" aalink stretched-link"><span class="instancename">Download DATA dan KONSTANTA <span class="accesshide "> Berkas</span></span>    </a>
                                                                 
                                                     </div>
                                                 </div>
