--- a/dasbor.html
+++ b/dasbor.html
@@ -3,13 +3,13 @@
 <html dir="ltr" lang="id" xml:lang="id" class="yui3-js-enabled">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" type="text/css" href="cid:css-39b501c7-fed8-4a52-9c79-51d60b4c50dc@mhtml.blink" />
+	<!--<link rel="stylesheet" type="text/css" href="cid:css-39b501c7-fed8-4a52-9c79-51d60b4c50dc@mhtml.blink" />
 	<link rel="stylesheet" type="text/css" href="cid:css-0cde5e44-fd45-4f71-ab72-5693e58a9f88@mhtml.blink" />
 	<link rel="stylesheet" type="text/css" href="cid:css-07538867-0d73-4bd2-9474-783952dcc767@mhtml.blink" />
 	<link rel="stylesheet" type="text/css" href="cid:css-9ad17881-b357-4deb-bd15-1a09356f5d69@mhtml.blink" />
 	<link rel="stylesheet" type="text/css" href="cid:css-629d65cd-49a7-46b3-95db-c2c7b015a92e@mhtml.blink" />
 	<link rel="stylesheet" type="text/css" href="cid:css-a295943b-124e-427e-bbd2-8d0a1674ef62@mhtml.blink" />
-	<link rel="stylesheet" type="text/css" href="cid:css-3f092542-29da-420c-ac64-a526c6c05e29@mhtml.blink" />
+	<link rel="stylesheet" type="text/css" href="cid:css-3f092542-29da-420c-ac64-a526c6c05e29@mhtml.blink" />-->
     <title>Dasbor</title>
     <link rel="shortcut icon" href="https://sains1-bpti.kemdikbud.go.id/pluginfile.php/1/theme_lambda/favicon/1685779320/favicon-32x32.png">
     
@@ -81,9 +81,9 @@
                                             </span>
                                         </a>
                                         <div class="dropdown-divider" role="presentation"><span class="filler">&nbsp;</span></div>
-                                        <a onclick="" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
+                                        <a onclick="window.location.replace('tes_server');" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
                                             <span class="menu-action-text" id="actionmenuaction-2">
-                                                Nilai
+                                                Tes Jaringan
                                             </span>
                                         </a>
                                         <a onclick="window.location.replace('kalender')" class="dropdown-item menu-action" role="menuitem" data-title="calendar,core_calendar" tabindex="-1" aria-labelledby="actionmenuaction-3">
@@ -663,6 +663,7 @@
 </div>
 
 <style>
+.nav,
 .multiline,
 .usermenu,
 .menu-action-text {
@@ -683,6 +684,7 @@ $(document).ready(function() {
 
 });
 </script>
+	
 
 </body>
 </html>
