--- a/osn.html
+++ b/osn.html
@@ -69,9 +69,9 @@
                                             </span>
                                         </a>
                                         <div class="dropdown-divider" role="presentation"><span class="filler">&nbsp;</span></div>
-                                        <a onclick="" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
+                                        <a onclick="window.location.replace('tes_server');" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
                                             <span class="menu-action-text" id="actionmenuaction-2">
-                                                Nilai
+                                                Tes Jaringan
                                             </span>
                                         </a>
                                         <a onclick="window.location.replace('kalender')" class="dropdown-item menu-action" role="menuitem" data-title="calendar,core_calendar" tabindex="-1" aria-labelledby="actionmenuaction-3">
@@ -342,7 +342,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-                                                                    <a href="./assets/pdf/tabelOSNAstronomi.pdf" target="_blank" class=" aalink stretched-link"><span class="instancename">Download DATA dan KONSTANTA <span class="accesshide "> Berkas</span></span>    </a>
+                                                                    <a href="./assets/pdf/tabelOSNAstronomi.pdf" class=" aalink stretched-link"><span class="instancename">Download DATA dan KONSTANTA <span class="accesshide "> Berkas</span></span>    </a>
                                                                 
                                                     </div>
                                                 </div>
@@ -597,7 +597,7 @@ $('.osn-ast').click(function() {
 $('.osn-k').click(function() {
 	$("#isi_osn-ast").attr("aria-expanded", (_, attr) => attr == "true" ? "false" : "true");
 	$(".isi_osn-k").toggle();
-});*/
+});8/
 </script>
 
 </body>
