--- a/osn.html
+++ b/osn.html
@@ -288,9 +288,10 @@
     <li><i>Kalau begitu, <u>memilih semua jawaban di soal Pilihan Ganda Kompleks</u> strategi bagus ya?</i><br><strong>TIDAK JUGA</strong>. Pilihan(-pilihan) <strong>jawaban yang benar telah diberi bobot angka positif</strong>, sedangkan pilihan(-pilihan) <strong>jawaban yang salah telah diberi bobot angka negatif</strong>, dan <strong>total jumlah bobot di soal tersebut adalah NOL</strong>.</li>
     <li><i>Boleh bawa/menggunakan <u>kalkulator</u>?</i><br><strong>Kalkulator fisik boleh dibawa ke meja tes</strong>. Kalkulator yang dimaksud adalah <strong>kalkulator saintifik tanpa fitur grafik</strong>.</li>
     <li><i>Boleh bawa <u>alat tulis dan kertas</u> untuk coretan/hitungan?</i><br><strong>Alat tulis baku</strong> (<strong>bukan gadget</strong>) <strong>boleh dibawa</strong> ke tempat tes. <strong>Kertas yang semua halamannya masih bersih/kosong dari tulisan juga boleh dibawa</strong> ke tempat tes.</li>
-    <li><i>Boleh <u>memakai dan menyimpan gadget di meja tempat tes</u>?</i><br><strong>TIDAK</strong>. Matikan fungsi gadget dengan menekan tombol power padanya. Simpan di dalam tas, amankan atau titipkan di tempat yang tersedia, atau ke pengawas tes/panitia di tempat tes. <strong>Gadget yang boleh dan bahkan HARUS disiapkan adalah gadget berkamera yang digunakan untuk pengawasan tes (<i>proctoring</i>)</strong>.</li>
+    <li><i>Boleh <u>memakai dan menyimpan gadget di meja tempat tes</u>?</i><br><strong>TIDAK</strong>. Matikan fungsi gadget dengan menekan tombol power padanya. Simpan di dalam tas, amankan atau titipkan di tempat yang tersedia, atau ke pengawas tes/panitia di tempat tes.</li>
     <li><i>Boleh bawa dan buka <u>buku di tempat tes</u>?</i><br><strong>TIDAK</strong>. Tes bersifat <i><strong>CLOSED BOOK</strong></i> (<strong>tutup buku</strong>)</li>
     <li><i>Apakah ada <u>soal dalam bahasa Inggris</u>?</i><br><strong>Mungkin ada</strong>.</li>
+	<li><i>Apakah disediakan <u>tabel konstanta</u>?</i><br><strong>Daftar konstanta yang berhubungan</strong> dengan soal akan disediakan dalam soal tersebut. Jika dalam soal tidak terdapat daftar konstanta, maka hal tersebut dianggap sebagai soal tantangan.</li>
 </ul></div>
                                     </div>
                                 </div>
